fix issue with translatex and overflow-x for media screen that caused issue when view the page on the mobil

--- a/css/style.css
+++ b/css/style.css
@@ -62,11 +62,11 @@ header{
 
 @media screen and (max-width:768px){
     body{
-        overflow: hidden;
+        overflow-x: hidden;
     }
    .nav-links{
        position: absolute;
-       right: 0;
+       right: 0px;
        height:92vh;
        top:8vh;
        background-color: #59594A;
@@ -85,7 +85,7 @@ header{
         display: block;
     }
     .header-active{
-        transform: translate(0%);
+        transform: translateX(0%);
     }
     @keyframes navLinkFade {
         from { 
